fix bug #42082 (NodeList length zero should be empty). (Hannes) add and update tests

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@240802 c90b9560-bf6c-de11-be94-00142212c4b1